# editGPT

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  settings-fireworks.yaml  settings-groq.yaml  settings-llamacpp.yaml  settings-test.yaml  settings.yaml
.github/workflows/: test.yml
edit_gpt/: __main__.py  main.py
edit_gpt/chat_models/: init_chat_model.py
edit_gpt/chat_models/providers/: anthropic.py  fake.py  fireworks.py  gigachat.py  google.py  groq.py  huggingface.py  ollama.py  openai.py
edit_gpt/chat_models/providers/llamacpp/: llamacpp.py  llamacpp_chat.py
edit_gpt/components/: diff_storage.py  file_storage.py  ingest_service.py  langsmith_client.py
edit_gpt/components/chat/: chat_manager.py  chat_prompts.py  data_preprocessor.py
edit_gpt/components/chat/agent/: agent.py  agent_builder.py  agent_prompts.py
edit_gpt/components/chat/agent/output_parsers/: react_output_parser.py
edit_gpt/components/chat/agent/tools/: edit_file.py  tools_builder.py
edit_gpt/components/history/: init_history.py  vector_based_history.py
edit_gpt/components/rag/: base_rag.py
edit_gpt/components/rag/local/: rag_local.py  rag_prompts.py
edit_gpt/components/web_search/: init_web_search.py  web_search_retriever.py
edit_gpt/settings/: settings.py  settings_loader.py
edit_gpt/ui/: ui.py
edit_gpt/utils/: loaders.py  utils.py
licenses/: licenses.html
tests/: test_settings.py
