[tool.poetry]
name = "edit-gpt"
version = "0.1.0"
description = "Edit GPT"
authors = ["Moskidon <46126524+Moskidon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
gradio = "^4.26.0"
python-dotenv = "^1.0.1"
langchain-fireworks = {version = "^0.1.2", optional = true}
sentence-transformers = "^2.7.0"
faiss-cpu = "^1.8.0"
langchain-google-genai = {version = "^1.0.2", optional = true}
langchain-openai = {version = "^0.1.3", optional = true}
langchain-community = "^0.0.34"
llama-cpp-python = {version = "^0.2.63", optional = true}
langchain-groq = {version = "^0.1.2", optional = true}
duckduckgo-search = "^5.3.0"

[tool.poetry.extras]
fireworks = ["langchain-fireworks"]
gemini = ["langchain-google-genai"]
openai = ["langchain-openai"]
llamacpp = ["llama-cpp-python"]
groq = ["langchain-groq"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"
pre-commit = "^3.7.0"
ruff = "^0.4.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
